force-app/main/default/objects/School__c/fields/NO_of_Teachers__c.field-meta.xml
<CustomField>
    <fullName>NO_of_Teachers__c</fullName>
    <label>NO of Teachers</label>
    <summaryForeignKey>Teacher__c.School__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>