force-app/main/default/objects/School__c/fields/Principal_Name__c.field-meta.xml
<CustomField>
    <fullName>Principal_Name__c</fullName>
    <label>Principal Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>