force-app/main/default/objects/School__c/fields/Transportation_Facility__c.field-meta.xml
<CustomField>
    <fullName>Transportation_Facility__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transportation Facility</label>
    <type>Checkbox</type>
</CustomField>