force-app/main/default/objects/School__c/validationRules/phone_must_be_10.validationRule-meta.xml
<ValidationRule>
    <fullName>phone_must_be_10</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX( Phone__c , &quot;\\D*?(\\d\\D*?){10}&quot;))</errorConditionFormula>
    <errorDisplayField>Phone__c</errorDisplayField>
    <errorMessage>Phone must be 10 digits</errorMessage>
</ValidationRule>